--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -24,8 +24,7 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" PrivateAssets="All" />
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="NSubstitute.Analyzers.CSharp" PrivateAssets="All" />
-        <PackageReference Include="xunit" />
-        <PackageReference Include="xunit.abstractions" />
+        <PackageReference Include="xunit.v3" />
         <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="All" />
       </ItemGroup>
 
