--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,17 +2,17 @@
 
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 
-  <!-- Code Coverage -->
-  <PropertyGroup>
-    <RunSettingsFilePath>$(SrcDirectory)CodeCoverage.runsettings</RunSettingsFilePath>
-  </PropertyGroup>
-
   <!-- Test Properties, Packages, etc -->
   <Choose>
     <When Condition="$(MSBuildProjectName.EndsWith('.Test'))">
 
       <PropertyGroup>
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
+        <OutputType>Exe</OutputType>
         <TargetProjectName>$(MSBuildProjectName.Substring(0, $([MSBuild]::Subtract($(MSBuildProjectName.Length), 5))))</TargetProjectName>
+        <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+        <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
       </PropertyGroup>
 
       <ItemGroup>
@@ -20,8 +20,8 @@
       </ItemGroup>
 
       <ItemGroup>
-        <PackageReference Include="coverlet.collector" PrivateAssets="All" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
         <PackageReference Include="NSubstitute" />
         <PackageReference Include="NSubstitute.Analyzers.CSharp" PrivateAssets="All" />
         <PackageReference Include="xunit.v3" />
