--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -334,10 +334,13 @@ runs:
     - name: Test Scaler
       shell: bash
       run: |
-        kubectl port-forward service/azurite -n azure 10000:10000 10001:10001 10002:10002 > /dev/null &
-        dotnet test "./tests/Keda.Scaler.DurableTask.AzureStorage.Test.Integration/Keda.Scaler.DurableTask.AzureStorage.Test.Integration.csproj" \
-          -c "${{ inputs.buildConfiguration }}" \
-          -p:ContinuousIntegrationBuild=true \
+        kubectl port-forward service/azurite -n azure 10000:10000 10001:10001 10002:10002 > /dev/null &  
+        dotnet run \
+          --configuration "${{ inputs.buildConfiguration }}" \
+          --project "./tests/Keda.Scaler.DurableTask.AzureStorage.Test.Integration/Keda.Scaler.DurableTask.AzureStorage.Test.Integration.csproj" \
+          --verbosity normal \
+          -- \
+          --property:ContinuousIntegrationBuild=true \
           -warnaserror
       env:
         DurableTask__ConnectionName: DurableTask:ConnectionString
