--- a/tests/Keda.Scaler.Functions.Worker.DurableTask.Examples/Dockerfile
+++ b/tests/Keda.Scaler.Functions.Worker.DurableTask.Examples/Dockerfile
@@ -11,7 +11,7 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "Keda.Scaler.Functions.Worker.DurableTask.Examples.csproj" -c $BUILD_CONFIGURATION -warnaserror -o /app/publish /p:UseAppHost=false
 
-FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated9.0-mariner@sha256:fde1ccb6491d83505a5dcbfd9c7e49b8b2df6d8612abcd46fe24529f77db7d7b AS runtime
+FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated9.0@sha256:376e2c44f572ece617efdbbe2c848b4cbaaaaba0a4d2f28ba4871ad2cd91105a AS runtime
 RUN chown -R $APP_UID /azure-functions-host
 ENV ASPNETCORE_URLS=http://+:8080 \
     AzureFunctionsJobHost__FileWatchingEnabled=false \
