--- a/charts/durabletask-azurestorage-scaler/templates/01-serviceaccount.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/01-serviceaccount.yaml
@@ -4,23 +4,23 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/name: {{ template "durabletask-azurestorage-scaler.serviceAccountName" . }}
-    {{- if .Values.podIdentity.azureWorkload.enabled }}
+    {{- if .Values.podIdentity.enabled }}
     azure.workload.identity/use: "true"
     {{- end }}
     {{- include "durabletask-azurestorage-scaler.labels" . | indent 4 }}
-  {{- if or .Values.podIdentity.azureWorkload.enabled .Values.serviceAccount.annotations .Values.additionalAnnotations }}
+  {{- if or .Values.podIdentity.enabled .Values.serviceAccount.annotations .Values.additionalAnnotations }}
   annotations:
     {{- if .Values.additionalAnnotations }}
     {{- toYaml .Values.additionalAnnotations | indent 4 }}
     {{- end }}
-    {{- if .Values.podIdentity.azureWorkload.enabled }}
-    {{- if .Values.podIdentity.azureWorkload.clientId }}
-    azure.workload.identity/client-id: {{ .Values.podIdentity.azureWorkload.clientId | quote }}
+    {{- if .Values.podIdentity.enabled }}
+    {{- if .Values.podIdentity.clientId }}
+    azure.workload.identity/client-id: {{ .Values.podIdentity.clientId | quote }}
     {{- end }}
-    {{- if .Values.podIdentity.azureWorkload.tenantId }}
-    azure.workload.identity/tenant-id: {{ .Values.podIdentity.azureWorkload.tenantId | quote }}
+    {{- if .Values.podIdentity.tenantId }}
+    azure.workload.identity/tenant-id: {{ .Values.podIdentity.tenantId | quote }}
     {{- end }}
-    azure.workload.identity/service-account-token-expiration: {{ .Values.podIdentity.azureWorkload.tokenExpiration | quote }}
+    azure.workload.identity/service-account-token-expiration: {{ .Values.podIdentity.tokenExpiration | quote }}
     {{- end }}
     {{- if .Values.serviceAccount.annotations }}
     {{- toYaml .Values.serviceAccount.annotations | nindent 4}}
