--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -33,7 +33,7 @@ spec:
         {{- if .Values.podLabels }}
         {{- toYaml .Values.podLabels | nindent 8 }}
         {{- end }}
-        {{- if .Values.podIdentity.azureWorkload.enabled }}
+        {{- if .Values.podIdentity.enabled }}
         azure.workload.identity/use: "true"
         {{- end }}
       {{- if or .Values.podAnnotations .Values.additionalAnnotations }}
