--- a/.github/actions/code-coverage/action.yml
+++ b/.github/actions/code-coverage/action.yml
@@ -1,9 +1,6 @@
 name: Check Code Coverage
 description: Validates code coverage and uploads the results.
 inputs:
-  codecovToken:
-    description: The Codecov upload token
-    required: true
   reportPath:
     description: The path to the cobertura coverage file.
     required: true
@@ -27,4 +24,4 @@ runs:
       with:
         directory: ${{ runner.temp }}/codecoverage/
         fail_ci_if_error: true
-        token: ${{ inputs.codecovToken }}
+        use_oidc: true
