--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     outputs:
       chartVersion: ${{ steps.chart.outputs.chartVersion }}
       imageTag: ${{ steps.chart.outputs.imageTag }}
@@ -18,9 +18,6 @@ jobs:
       id-token: write
 
     steps:
-      - name: Update Git Config
-        run: git config --system core.longpaths true
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -32,23 +29,34 @@ jobs:
         uses: ./.github/actions/dotnet-publish
         with:
           assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
-          azureClientId: ${{ secrets.AZURE_CLIENT_ID }}
-          azureCodeSigningAccountName: ${{ secrets.AZURE_CODESIGNING_NAME }}
-          azureSubscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          azureTenantId: ${{ secrets.AZURE_TENANT_ID }}
           buildConfiguration: Release
-          certificateProfileName: ${{ secrets.AZURE_CODESIGNING_PROFILE_NAME }}
           coverageFileName: coverage.cobertura.xml
           fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
-          repositoryUri: ${{ github.server_url }}/${{ github.repository }}
-          sign: 'true'
           testResultsDirectory: ${{ runner.temp }}/TestResults
 
       - name: Upload Code Coverage
         uses: ./.github/actions/code-coverage
         with:
-          codecovToken: ${{ secrets.CODECOV_TOKEN }}
           reportPath: ${{ runner.temp }}/TestResults/coverage.cobertura.xml
+
+  sign:
+    name: Code Sign
+    runs-on: windows-latest
+    needs: build
+
+    permissions:
+      id-token: write
+
+    steps:
+      - name: Sign Executable
+        uses: ./.github/actions/code-sign
+        with:
+          azureClientId: ${{ secrets.AZURE_CLIENT_ID }}
+          azureCodeSigningAccountName: ${{ secrets.AZURE_CODESIGNING_NAME }}
+          azureSubscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          azureTenantId: ${{ secrets.AZURE_TENANT_ID }}
+          certificateProfileName: ${{ secrets.AZURE_CODESIGNING_PROFILE_NAME }}
+          repositoryUri: ${{ github.server_url }}/${{ github.repository }}
 
   validate:
     name: Validate
