--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -11,6 +11,9 @@ jobs:
     name: Validate
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,7 +37,6 @@ jobs:
       - name: Upload Code Coverage
         uses: ./.github/actions/code-coverage
         with:
-          codecovToken: ${{ secrets.CODECOV_TOKEN }}
           reportPath: ${{ runner.temp }}/TestResults/coverage.cobertura.xml
 
       - name: Build Docker Image
