--- a/charts/example-function-app/templates/02-deployment.yaml
+++ b/charts/example-function-app/templates/02-deployment.yaml
@@ -63,4 +63,10 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 5
+          volumeMounts:
+            - name: secrets
+              mountPath: /azure-functions-host/Secrets
       serviceAccountName: {{ template "example-function-app.fullname" . }}
+      volumes:
+        - name: secrets
+          emptyDir: {}
