--- a/charts/example-function-app/templates/02-deployment.yaml
+++ b/charts/example-function-app/templates/02-deployment.yaml
@@ -66,7 +66,11 @@ spec:
           volumeMounts:
             - name: secrets
               mountPath: /azure-functions-host/Secrets
+            - name: tmp
+              mountPath: /tmp/Functions
       serviceAccountName: {{ template "example-function-app.fullname" . }}
       volumes:
         - name: secrets
+          emptyDir: {}
+        - name: tmp
           emptyDir: {}
