--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -32,8 +32,8 @@ jobs:
 
     - name: Build
       run: |
-        dotnet build ./src/Scaler.sln -c Release -p:ContinuousIntegrationBuild=true -warnaserror
-        dotnet build ./tests/ScaleTests.sln -c Release -p:ContinuousIntegrationBuild=true -warnaserror
+        dotnet build ./src/Scaler.slnx -c Release -p:ContinuousIntegrationBuild=true -warnaserror
+        dotnet build ./tests/ScaleTests.slnx -c Release -p:ContinuousIntegrationBuild=true -warnaserror
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
