Fix codeql init

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,6 +26,7 @@ jobs:
       uses: github/codeql-action/init@v4
       with:
         languages: 'csharp'
+        tools: https://github.com/dsp-testing/codeql-cli-nightlies/releases/download/codeql-bundle-20251112/codeql-bundle.tar.zst
 
     - name: Setup
       uses: actions/setup-dotnet@v5
