--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -343,11 +343,10 @@ runs:
       shell: bash
       run: |
         kubectl port-forward service/azurite -n azure 10000:10000 10001:10001 10002:10002 > /dev/null &
-        dotnet run \
+        dotnet test \
           --configuration "${{ inputs.buildConfiguration }}" \
           --no-build \
-          --project "./tests/Keda.Scaler.DurableTask.AzureStorage.Test.Integration/Keda.Scaler.DurableTask.AzureStorage.Test.Integration.csproj" \
-          --verbosity normal
+          --solution "./tests/ScaleTests.slnx"
       env:
         DurableTask__ConnectionName: DurableTask:ConnectionString
         DurableTask__ConnectionString: 'DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://127.0.0.1:10000/devstoreaccount1;QueueEndpoint=http://127.0.0.1:10001/devstoreaccount1;TableEndpoint=http://127.0.0.1:10002/devstoreaccount1;'
@@ -360,7 +359,6 @@ runs:
         Scaling__LoggingInterval: ${{ inputs.testStatusLoggingInterval }}
         Scaling__MaxActivitiesPerWorker: '${{ inputs.maxActivitiesPerWorker }}'
         Scaling__PollingInterval: ${{ inputs.testStatusPollingInterval }}
-        Scaling__Timeout: ${{ inputs.testTimeout }}
 
     - if: ${{ failure() }}
       name: Get Keda Logs
